--- a/argocd/apps/backend.yaml
+++ b/argocd/apps/backend.yaml
@@ -16,7 +16,8 @@ spec:
         redis:
           enable: true
     repoURL: https://stefanprodan.github.io/podinfo
-    targetRevision: 6.2.1
+    targetRevision: 6.7.0
   syncPolicy:
+    automated: {}
     syncOptions:
     - CreateNamespace=true
