fix(argocd): change cluster destination to in-cluster

--- a/argocd/components/appprojects/argocd/appproject.yaml
+++ b/argocd/components/appprojects/argocd/appproject.yaml
@@ -8,7 +8,7 @@ spec:
     - group: '*'
       kind: '*'
   destinations:
-    - name: https://kubernetes.default.svc
+    - name: in-cluster
       namespace: argocd
       server: '*'
   namespaceResourceWhitelist:
