--- a/argocd/clusters/interview-gitops-sks/bootstrap/kustomization.yaml
+++ b/argocd/clusters/interview-gitops-sks/bootstrap/kustomization.yaml
@@ -11,7 +11,7 @@ patches:
     patch: |-
       - op: replace
         path: /spec/destination/name
-        value: 'https://kubernetes.default.svc'
+        value: 'in-cluster'
       - op: add
         path: /metadata/labels/cluster
         value: 'interview-gitops-sks'
