fix(argocd): add kube system to appproject

--- a/argocd/components/appprojects/infrastructure/appproject.yaml
+++ b/argocd/components/appprojects/infrastructure/appproject.yaml
@@ -9,6 +9,9 @@ spec:
       kind: '*'
   destinations:
     - name: in-cluster
+      namespace: kube-system
+      server: '*'
+    - name: in-cluster
       namespace: cert-manager
       server: '*'
     - name: in-cluster
