fix(cluster-config): install podinfo helm under different releasenames

--- a/argocd/clusters/interview-gitops-sks/applications/backend/kustomization.yaml
+++ b/argocd/clusters/interview-gitops-sks/applications/backend/kustomization.yaml
@@ -9,6 +9,9 @@ patches:
     - op: replace
       path: /metadata/name
       value: backend
+    - op: replace
+      path: /spec/sources/0/helm/releaseName
+      value: podinfo-backend
     - op: add
       path: /spec/sources/0/helm/valueFiles
       value: 
