feat(argocd): enable https for argocd

--- a/argocd/clusters/interview-gitops-sks/applications/argocd/helm-values.yaml
+++ b/argocd/clusters/interview-gitops-sks/applications/argocd/helm-values.yaml
@@ -11,15 +11,15 @@ configs:
     policy.csv: |
       g, joggie, role:admin
 server:
-#  ingress:
-#    annotations:
-#      cert-manager.io/cluster-issuer: letsencrypt-prod
-#      kubernetes.io/tls-acme: 'true'
-#      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
-#      nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
-#    enabled: true
-#    https: true
-#    ingressClassName: nginx
-#    tls: true
+  ingress:
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      kubernetes.io/tls-acme: 'true'
+      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
+      nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
+    enabled: true
+    https: true
+    ingressClassName: traefik
+    tls: true
   config:
     accounts.joggie: apiKey, login
