fix(cluster-config): forgot to add components to argocd

--- a/argocd/clusters/interview-gitops-sks/applications/argocd/kustomization.yaml
+++ b/argocd/clusters/interview-gitops-sks/applications/argocd/kustomization.yaml
@@ -10,6 +10,12 @@ patches:
       path: /spec/sources/0/helm/valueFiles
       value: 
         - $values/argocd/clusters/interview-gitops-sks/applications/argocd/helm-values.yaml
+    - op: add
+      path: /spec/sources/-
+      value:
+        path: argocd/clusters/interview-gitops-sks/applications/argocd/components
+        repoURL: https://github.com/joggie/job-interview-task-gitops.git
+        targetRevision: HEAD
   target:
     group: argoproj.io
     kind: Application
