fix(cluster-config): set argocd https url

--- a/argocd/clusters/interview-gitops-sks/applications/argocd/helm-values.yaml
+++ b/argocd/clusters/interview-gitops-sks/applications/argocd/helm-values.yaml
@@ -5,6 +5,7 @@ dex: # saml
 configs:
   cm:
     create: true
+    url: https://argocd.demo.nerdhome.at
   rbac:
     create: true
     policy.default: role:readonly
