--- a/argocd/clusters/interview-gitops-sks/applications/argocd/components/IngressRoute-argocd-server.yaml
+++ b/argocd/clusters/interview-gitops-sks/applications/argocd/components/IngressRoute-argocd-server.yaml
@@ -11,5 +11,6 @@ spec:
       services:
         - name: argocd-server
           port: 80
+          scheme: http
   tls:
     secretName: argocd-demo-nerdhome-at-tls
