fix(cluster-config): fix wrong server insecure config

--- a/argocd/clusters/interview-gitops-sks/applications/argocd/helm-values.yaml
+++ b/argocd/clusters/interview-gitops-sks/applications/argocd/helm-values.yaml
@@ -9,5 +9,5 @@ configs:
   rbac:
     create: true
     policy.default: role:readonly
-server:
-  insecure: true
+  params:
+    server.insecure: true
