--- a/argocd/clusters/interview-gitops-sks/applications/frontend/kustomization.yaml
+++ b/argocd/clusters/interview-gitops-sks/applications/frontend/kustomization.yaml
@@ -16,6 +16,12 @@ patches:
       path: /spec/sources/0/helm/valueFiles
       value: 
         - $values/argocd/clusters/interview-gitops-sks/applications/frontend/helm-values.yaml
+    - op: add
+      path: /spec/sources/-
+      value:
+        path: argocd/clusters/interview-gitops-sks/applications/frontend/components
+        repoURL: https://github.com/joggie/job-interview-task-gitops.git
+        targetRevision: HEAD
   target:
     group: argoproj.io
     kind: Application
